syntax = "proto3";

package chat;

service ChatService{
    rpc makeChat(stream ChatRequest) returns (stream ChatResponse) {}
}

message ChatRequest{
    double chat = 1;
    string name =2;
}

message ChatResponse{
    double chat = 1;
    string name = 2;
    uint32 chatNo = 3;
    string message = 4;
}
